# autowolf

./: .env.sample  .gitignore  README.md  chainlit.md  deploy_agent_service.py  game.py  index.html  main.py  model_config.yaml  pyproject.toml  utils.py
.chainlit/: config.toml
agents/: player.py
models/: AgentVoteResponse.py  seer_choice_response.py
roles/: _role.py  seer.py  villager.py  werewolf.py
terminations/: text_mention_from_all_termination.py
ui/: message_handler.py  task_handler.py
