[tool.poetry]
name = "ai-werewolf"
version = "0.1.0"
description = "A game of werewolf with autonomous agents"
authors = ["jjgriff93 <me@jamesgriff.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
autogen-agentchat = "^0.4.9"
autogen-ext = {extras = ["azure", "openai"], version = "^0.4.9"}
azure-identity = "1.20.0"
python-dotenv = "^1.0.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
